<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_advanced"
    android:title="@string/menu_advanced_string"
    android:orderInCategory="1"
    app:showAsAction="never"/>
    <item android:id="@+id/action_filters"
        android:title="@string/menu_filters_string"
        android:orderInCategory="2"
        app:showAsAction="never"/>
    <item android:id="@+id/action_latlong_search"
        android:title="@string/menu_latlong_string"
        android:orderInCategory="3"
        app:showAsAction="never"/>
    <item android:id="@+id/action_prior_bookings"
        android:title="Prior Bookings"
        android:orderInCategory="4"
        app:showAsAction="never"/>
</menu>