<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/listingImageView"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:scaleType="centerCrop"
                android:src="@drawable/parking_spot"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:id="@+id/listingTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/listing_title_string"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="40dp"
                    android:layout_alignParentBottom="true"/>

                <TextView
                    android:id="@+id/listingAddressTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/listing_address_string"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="16dp"/>

                <TextView
                    android:id="@+id/priceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_string"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="20dp"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/contentLayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/listingImageView"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/owner_name_string"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/ownerTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="John Appleseed"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_string"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_string"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/aboutTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_string_example"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/listing_rating_string"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/owner_rating_string"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"/>

                <TextView
                    android:id="@+id/moreReviewsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more_reviews_string"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_string"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/selectPaymentTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_payment_string"
                    android:textSize="18sp"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@id/contentLayout">

                <TextView
                    android:id="@+id/totalPriceTextView"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_price_string"
                    android:textSize="20sp"
                    android:layout_marginStart="22dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"/>

                <Button
                    android:id="@+id/confirmBookingButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_booking_string"
                    android:textSize="14sp"
                    android:padding="20dp"
                    android:layout_marginEnd="22dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>